# open-edifier

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/ios/: README.md
apps/macos/: GenerateAppIcon.swift  Info.plist  OpenEdifierBridge.h  OpenEdifierSwiftUI.swift  README.md  StorePolicy.swift  build.sh  package.sh
apps/macos/tests/: StorePolicyTests.swift
bindings/python/: LICENSE  README.md  pyproject.toml
bindings/python/src/open_edifier/: __init__.py  client.py  errors.py  models.py  protocol.py
bindings/python/tests/: test_client.py  test_protocol.py
bindings/swift/: README.md
bindings/swift/native/: Cargo.toml
bindings/swift/native/src/: lib.rs
crates/open-edifier/: Cargo.toml
crates/open-edifier-aaec/: Cargo.toml
crates/open-edifier-aaec/src/: lib.rs
crates/open-edifier-cli/: Cargo.toml
crates/open-edifier-cli/src/: main.rs
crates/open-edifier-core/: Cargo.toml
crates/open-edifier-core/src/: lib.rs
crates/open-edifier-discovery/: Cargo.toml
crates/open-edifier-discovery/src/: lib.rs
crates/open-edifier-s260/: Cargo.toml
crates/open-edifier-s260/src/: client.rs  error.rs  events.rs  lib.rs  model.rs  protocol.rs
crates/open-edifier-s260/tests/: client_mock.rs  events_mock.rs
crates/open-edifier/src/: lib.rs
docs/: aaec.md  architecture.md  codebase-review-2026-07-22.md  discovery.md  productization.md  protocol.md  release.md  research-journey.md
docs/archive/: webui-plan.md
docs/release-notes/: 0.1.0-alpha.1.md  0.2.0-alpha.1.md
integrations/home-assistant/: README.md
research/: README.md
