[package]
name = "open-edifier-aaec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "AA EC/BB EC binary framing used by supported EDIFIER speakers"

[dependencies]
thiserror.workspace = true
