[package]
name = "open-edifier-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Multi-model CLI for the OpenEdifier ecosystem"

[[bin]]
name = "edifier"
path = "src/main.rs"

[dependencies]
clap.workspace = true
open-edifier = { version = "0.2.0-alpha.1", path = "../open-edifier" }
serde_json.workspace = true
