[package]
name = "open-edifier-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Local network discovery for OpenEdifier speakers"
documentation = "https://docs.rs/open-edifier-discovery"

[dependencies]
mdns-sd.workspace = true
open-edifier-core = { version = "0.1.0-alpha.1", path = "../open-edifier-core" }
