[package]
name = "open-edifier-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Local network discovery for OpenEdifier speakers"

[dependencies]
mdns-sd.workspace = true
open-edifier-core = { version = "0.2.0-alpha.1", path = "../open-edifier-core" }
