[package]
name = "open-edifier-s260"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "EDIFIER S260 local network driver for the OpenEdifier ecosystem"

[dependencies]
open-edifier-aaec = { version = "0.1.0-alpha.1", path = "../open-edifier-aaec" }
open-edifier-core = { version = "0.1.0-alpha.1", path = "../open-edifier-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
