[package]
name = "open-edifier"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Local-first Rust SDK for supported EDIFIER speakers"

[dependencies]
open-edifier-core = { version = "0.2.0-alpha.1", path = "../open-edifier-core" }
open-edifier-discovery = { version = "0.2.0-alpha.1", path = "../open-edifier-discovery" }
open-edifier-s260 = { version = "0.2.0-alpha.1", path = "../open-edifier-s260" }
